Modificación about + home

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -94,7 +94,7 @@
 		<ul class="pi-simple-menu pi-has-hover-border pi-full-height pi-hidden-sm">
 			<li class="active"><a href="index.html"><span>Home</span></a>
 			</li>
-			<li class="pi-has-dropdown"><a href="headers-headers-light.html"><span>Quiénes somos</span></a>
+			<li class="pi-has-dropdown"><a href="about-about-3.html"><span>Quiénes somos</span></a>
 				<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
 					<li><a href="headers-headers-light.html"><span>Misión</span></a></li>
 					<li><a href="headers-headers-dark.html"><span>Visión</span></a></li>
