Cambio en nombres de las paginas

--- a/heliconia/contact-contact-1-fancy-header.html
+++ b/heliconia/contact-contact-1-fancy-header.html
@@ -535,7 +535,7 @@
 		<div class="pi-row">
 			<div class="pi-col-sm-8">
 				<h2 class="h4 pi-has-bg pi-weight-700 pi-uppercase pi-letter-spacing pi-margin-bottom-30">
-					Get In Touch
+					Ponte en contacto
 				</h2>
 
 				<!-- Contact form -->
@@ -544,37 +544,36 @@
 					<div class="pi-row pi-grid-small-margins">
 						<div class="pi-col-sm-6">
 							<div class="form-group pi-padding-bottom-10">
-								<label for="exampleInputName1">Name *</label>
+								<label for="exampleInputName1">Nombre completo *</label>
 								<input type="text" class="form-control form-control-name" id="exampleInputName1"
-									   placeholder="e.g. Adam Smith">
+									   placeholder="e.g. Pedro Pérez">
 							</div>
 							<div class="form-group pi-padding-bottom-10">
-								<label for="exampleInputEmail1">Email address *</label>
+								<label for="exampleInputEmail1">Correo electrónico *</label>
 								<input type="email" class="form-control form-control-email" id="exampleInputEmail1"
-									   placeholder="e.g. mail@example.com">
+									   placeholder="e.g. mail@ejemplo.com">
 							</div>
 						</div>
 						<div class="pi-col-sm-6">
 							<div class="form-group pi-padding-bottom-10">
-								<label for="exampleInputCompany">Company Name</label>
+								<label for="exampleInputCompany">Nombre de la empresa</label>
 								<input type="text" class="form-control form-control-company-name" id="exampleInputCompany"
-									   placeholder="e.g. PI Studio">
+									   placeholder="e.g. Constructora Pérez">
 							</div>
 							<div class="form-group pi-padding-bottom-10">
-								<label for="exampleInputPhone">Phone</label>
+								<label for="exampleInputPhone">Teléfono</label>
 								<input type="text" class="form-control form-control-phone" id="exampleInputPhone"
-									   placeholder="e.g. +11111111">
+									   placeholder="e.g. 1111111">
 							</div>
 						</div>
 					</div>
 					<div class="form-group pi-padding-bottom-10">
-						<label for="exampleInputSelect">Your Budget</label>
+						<label for="exampleInputSelect">Servicio de interés</label>
 						<select class="form-control form-control-budjet" id="exampleInputSelect">
-							<option>$1000</option>
-							<option>$1500</option>
-							<option>$3000</option>
-							<option>$5000</option>
-							<option>$10000</option>
+							<option>1</option>
+							<option>2</option>
+							<option>3</option>
+							<option>4</option>
 						</select>
 					</div>
 					<div class="form-group pi-padding-bottom-10">
