--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -581,35 +581,37 @@
 			<div class="pi-clearfix pi-hidden-lg-only pi-hidden-md-only"></div>
 
 			<!-- Col 4 -->
-			<div class="pi-col-md-6 pi-col-sm-6 pi-padding-bottom-30" style="background-image: url('img/map-base.png'); background-position: 50% 55px; background-repeat: no-repeat;">
+			<div class="pi-col-md-6 pi-col-sm-6 pi-padding-bottom-30" style="background-image: url('img/colombia-locator.png'); background-position: 80% 0px; background-repeat: no-repeat;">
 
 				<h6 class="pi-margin-bottom-25 pi-weight-700 pi-uppercase pi-letter-spacing">
-					Contact Us
+					Contáctanos
 				</h6>
 
 				<!-- Contact info -->
-				<ul class="pi-list-with-icons pi-list-big-margins">
+				<ul class="pi-list-with-icons">
 
 					<li>
 						<span class="pi-bullet-icon"><i class="icon-location"></i></span>
-						<strong>Address:</strong> 557 Cyan Avenue, Suite 65, <br>New York, CA 9008
+						<strong>Dirección:</strong><br> Cra 7F # 147-48 Apto 706, Bogotá (110131)
 					</li>
 
 					<li>
 						<span class="pi-bullet-icon"><i class="icon-phone"></i></span>
-						<strong>Phone:</strong> (123) 456-7890
+						<strong>Teléfonos:</strong><br> (+57) 310 3183940 - (+57) 319 2572970
 					</li>
 
 					<li>
 						<span class="pi-bullet-icon"><i class="icon-mail"></i></span>
-						<strong>Email:</strong> <a href="mailto:hello@pitheme.com">hello@pitheme.com</a>
+						<strong>Email:</strong><br> <a href="mailto:info@heliconiatech.com">info@heliconiatech.com</a>
 					</li>
 
 					<li>
 						<span class="pi-bullet-icon"><i class="icon-clock"></i></span>
-						Monday - Friday: <strong>9:00 am - 10:00 pm</strong>
+						<strong>Horarios:</strong><br>Lunes - Viernes: <strong>8:00 am - 8:00 pm</strong>
 						<br>
-						Saturday - Sunday: <strong>Closed</strong>
+						Sábados: <strong>9:00 am - 1:00 pm</strong>
+						<br>
+						Domingos y Festivos: <strong>Cerrado</strong>
 					</li>
 
 				</ul>
