Ultimos avances 09 Junio

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -105,7 +105,7 @@
 						<li><a href="about.html"><span>Clientes satisfechos</span></a></li>
 					</ul>
 				</li>
-				<li class="pi-has-dropdown"><a href="docs-docs.html"><span>Nuestros servicios</span></a>
+				<li class="pi-has-dropdown"><a href="docs-docs.html"><span>Servicios</span></a>
 					<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
 						<li><a href="docs-docs.html"><span>Automatización</span></a></li>
 						<li><a href="docs-credits.html"><span>Desarrollo web</span></a></li>
@@ -156,7 +156,7 @@
 									<li><a href="about.html"><span>Clientes satisfechos</span></a></li>
 								</ul>
 							</li>
-							<li><a href="about-about-1.html"><span>Nuestros servicios</span></a>
+							<li><a href="about-about-1.html"><span>Servicios</span></a>
 								<ul>
 									<li><a href="about-about-1.html"><span>Automatización</span></a></li>
 									<li><a href="about-about-2.html"><span>Desarrollo web</span></a></li>
@@ -561,7 +561,7 @@
 				<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
 
 					<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-						<a href="services.html" class="pi-link-no-style">Nuestros servicios</a>
+						<a href="services.html" class="pi-link-no-style">Servicios</a>
 					</h6>
 					
 					<!-- Links -->
