Pagina servicios cambio y algunos textos en index

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -125,15 +125,15 @@
 								</li>
 								<li class="pi-has-dropdown"><a href="services.html"><span>Servicios</span></a>
 									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="docs-docs.html"><span>Automatización</span></a></li>
-										<li><a href="docs-credits.html"><span>Desarrollo web</span></a></li>
-										<li><a href="docs-changelog.html"><span>Consultoría TECH</span></a></li>
+										<li><a href="services.html"><span>Automatización</span></a></li>
+										<li><a href="services.html"><span>Desarrollo web</span></a></li>
+										<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 									</ul>
 								</li>
-								<li class="pi-has-dropdown"><a href="docs-docs.html"><span>Soporte</span></a>
+								<li class="pi-has-dropdown"><a href="support.html"><span>Soporte</span></a>
 									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="docs-docs.html"><span>F.A.Q.</span></a></li>
-										<li><a href="docs-credits.html"><span>Documentación útil</span></a></li>
+										<li><a href="support.html"><span>F.A.Q.</span></a></li>
+										<li><a href="support.html"><span>Documentación útil</span></a></li>
 									</ul>
 								</li>
 								<li><a href="contact.html"><span>Contáctanos</span></a>
@@ -164,15 +164,15 @@
 									</li>
 									<li><a href="services.html"><span>Servicios</span></a>
 										<ul>
-											<li><a href="about-about-1.html"><span>Automatización</span></a></li>
-											<li><a href="about-about-2.html"><span>Desarrollo web</span></a></li>
-											<li><a href="about-about-3.html"><span>Consultoría TECH</span></a></li>
+											<li><a href="services.html"><span>Automatización</span></a></li>
+											<li><a href="services.html"><span>Desarrollo web</span></a></li>
+											<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 										</ul>
 									</li>
 									<li><a href="support.html"><span>Soporte</span></a>
 										<ul>
-											<li><a href="about-about-1.html"><span>F.A.Q.</span></a></li>
-											<li><a href="about-about-2.html"><span>Documentación útil</span></a></li>
+											<li><a href="support.html"><span>F.A.Q.</span></a></li>
+											<li><a href="support.html"><span>Documentación útil</span></a></li>
 										</ul>
 									</li>
 									<li><a href="contact.html"><span>Contáctanos</span></a></li>
@@ -194,20 +194,20 @@
 				<div class="pi-texture" style="background: rgba(24, 28, 32, 0.7);"></div>
 				<div class="pi-section pi-padding-top-150 pi-padding-bottom-130 pi-text-center">
 					<h2 class="h1 pi-text-shadow">
-						Excepteur Sint <span class="pi-text-base">&</span> Occaecat
+						Bienvenido a <span class="pi-text-base">HeliconiaTech</span>
 					</h2>					
 					<p class="lead-18 pi-weight-300 pi-margin-bottom-30">
-						Nemo enim ipsam voluptatem quia voluptas sit aspernatur <br>aut odit aut fugit, sed quia consequuntur
+						<span class="pi-text-base">HeliconiaTech</span> es una empresa de ingeniería que ejecuta tus ideas <br>y planes usando tecnologías web y sistemas embebidos. 
 					</p>
 					<p>
-						<a href="contact-contact-1-fancy-header.html" class="btn pi-btn-contur-3 pi-btn-big">
+						<a href="contact.html" class="btn pi-btn-base pi-btn-no-border pi-shadow pi-btn-big">
 							Contáctanos
 						</a>
 						<span class="pi-clearfix pi-visible-sm"></span>
 						<span class="pi-or">o</span>
 						<span class="pi-clearfix pi-visible-sm"></span>
-						<a href="contact-contact-1-fancy-header.html" class="btn pi-btn-base pi-btn-no-border pi-shadow pi-btn-big">
-							Alguna cosa
+						<a href="about.html" class="btn pi-btn-contur-3 pi-btn-big">
+							Conócenos
 						</a>
 					</p>
 				</div>
@@ -248,7 +248,7 @@
 						</div>
 						<!-- Col 4 -->
 						<div class="pi-col-xs-4 pi-padding-bottom-40">
-							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="300">
+							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="10">
 								<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
 									<div class='img'>
 										<img src="img_external/icons/80px/light-bulb-lined-white.png" alt="">
@@ -268,7 +268,7 @@
 						<!-- End col 4 -->
 						<!-- Col 4 -->
 						<div class="pi-col-xs-4 pi-padding-bottom-40">
-							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="400">
+							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="110">
 								<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
 									<div class='img'>
 										<img src="img_external/icons/80px/monitor-lined-white.png" alt="">
@@ -289,7 +289,7 @@
 						<!-- End col 4 -->
 						<!-- Col 4 -->
 						<div class="pi-col-xs-4 pi-padding-bottom-40">
-							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="500">
+							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="210">
 								<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
 									<div class='img'>
 										<img src="img_external/icons/80px/pencil-pen-lined-white.png" alt="">
