Menu de index cambiado y FAQ page anadida

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -130,11 +130,7 @@
 										<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 									</ul>
 								</li>
-								<li class="pi-has-dropdown"><a href="support.html"><span>Soporte</span></a>
-									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="support.html"><span>F.A.Q.</span></a></li>
-										<li><a href="support.html"><span>Documentación útil</span></a></li>
-									</ul>
+								<li><a href="faq.html"><span>FAQ</span></a>
 								</li>
 								<li><a href="contact.html"><span>Contáctanos</span></a>
 								</li>
@@ -508,12 +504,12 @@
 						<!-- Col 3 -->
 						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
 							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="support.html" class="pi-link-no-style">Soporte</a>
+								<a href="support.html" class="pi-link-no-style">Información</a>
 							</h6>
 							<!-- Links -->
 							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
-								<li><a href="#">F.A.Q.</a></li>
-								<li><a href="#">Documentación útil</a></li>
+								<li><a href="faq.html">FAQ</a></li>
+								<li><a href="news.html">Noticias</a></li>
 							</ul>
 							<!-- End links -->
 						</div>
