Modificaciones generales (Ej sub-navegación para about)

--- a/heliconia/contact.html
+++ b/heliconia/contact.html
@@ -23,7 +23,7 @@
 	<style>
 		#location_map {
 			background-image: url('img/colombia-locator.png'); 
-			background-position: 80% 10px; 
+			background-position: 80% -6px; 
 			background-repeat: no-repeat;
 		}
 
@@ -102,13 +102,11 @@
 										<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 									</ul>
 								</li>
-								<li class="pi-has-dropdown"><a href="support.html"><span>Soporte</span></a>
-									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="support.html"><span>F.A.Q.</span></a></li>
-										<li><a href="support.html"><span>Documentación útil</span></a></li>
-									</ul>
+								<li>
+									<a href="faq.html"><span>FAQ</span></a>
 								</li>
-								<li class="active"><a href="contact.html"><span>Contáctanos</span></a>
+								<li class="active">
+									<a href="contact.html"><span>Contáctanos</span></a>
 								</li>
 							</ul>
 						</div>
@@ -141,12 +139,7 @@
 											<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 										</ul>
 									</li>
-									<li><a href="support.html"><span>Soporte</span></a>
-										<ul>
-											<li><a href="support.html"><span>F.A.Q.</span></a></li>
-											<li><a href="support.html"><span>Documentación útil</span></a></li>
-										</ul>
-									</li>
+									<li><a href="faq.html"><span>FAQ</span></a></li>
 									<li class="active"><a href="contact.html"><span>Contáctanos</span></a></li>
 								</ul>
 							</div>
@@ -267,11 +260,11 @@
 								¿Cómo encontrarnos?
 							</h2>
 							<ul class="pi-list-with-icons pi-list-big-margins pi-padding-bottom-10">
-								<li><span class="pi-bullet-icon"><i class="icon-location"></i></span>Cra 7F # 147-48, <br>Bogotá (110131)<br>
+								<li><span class="pi-bullet-icon"><i class="icon-location"></i></span>Cra 7F # 147-48, Of. 706<br>Bogotá (110131)<br>
 								<a href='https://www.google.com/maps/place/Cra.+7f+%23147-48,+Bogot%C3%A1,+Colombia/@4.7248006,-74.0297818,17z/data=!3m1!4b1!4m2!3m1!1s0x8e3f8ff5575cb9d3:0x6de07d8d6d4e5b9d'>¿Cómo llegar?<a>
 								</li>
-								<li><span class="pi-bullet-icon"><i class="icon-mail"></i></span><a href="#">info@heliconiatech.com</a><br></li>
-								<li><span class="pi-bullet-icon"><i class="icon-phone"></i></span>(+57) <strong>310 3183940</strong>, <br>
+								<li><span class="pi-bullet-icon"><i class="icon-mail"></i></span><a href="mailto:info@heliconiatech.com">info@heliconiatech.com</a><br></li>
+								<li><span class="pi-bullet-icon"><i class="icon-phone"></i></span>(+57) <strong>310 3183940</strong><br>
 								(+57) <strong>319 2572970</strong></li>
 								<li><span class="pi-bullet-icon"><i class="icon-clock"></i></span>Lunes - Viernes: <strong>8:00 am - 8:00 pm</strong>
 								<br>
@@ -311,44 +304,29 @@
 					<!-- Row -->
 					<div class="pi-row">
 						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
+						<div class="pi-col-md-3 pi-col-xs-6 pi-padding-bottom-30">
 							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="about.html" class="pi-link-no-style">Conócenos</a>
+								HeliconiaTech
 							</h6>
 							<!-- Links -->
 							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
 								<li><a href="about.html">Misión y Visión</a></li>
-								<li><a href="about.html">Nuestra historia</a></li>
 								<li><a href="about.html">El equipo</a></li>
-								<li><a href="about.html">Clientes satisfechos</a></li>
-								<li><a href="#">Estamos contratando</a></li>
+								<li><a href="services.html">Nuestros servicios</a></li>
 							</ul>
 							<!-- End links -->
 						</div>
 						<!-- End col 3 -->
 						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
+						<div class="pi-col-md-3 pi-col-xs-6 pi-padding-bottom-30">
 							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="services.html" class="pi-link-no-style">Servicios</a>
+								Información
 							</h6>
 							<!-- Links -->
 							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
-								<li><a href="#">Automatización</a></li>
-								<li><a href="#">Desarrollo web</a></li>
-								<li><a href="#">Consultoría TECH</a></li>
-							</ul>
-							<!-- End links -->
-						</div>
-						<!-- End col 3 -->
-						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
-							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="support.html" class="pi-link-no-style">Soporte</a>
-							</h6>
-							<!-- Links -->
-							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
-								<li><a href="#">F.A.Q.</a></li>
-								<li><a href="#">Documentación útil</a></li>
+								<li><a href="faq.html">FAQ</a></li>
+								<li><a href="news.html">Noticias</a></li>
+								<li><a href="#">Trabaja con nosotros</a></li>
 							</ul>
 							<!-- End links -->
 						</div>
@@ -372,14 +350,6 @@
 								<li>
 									<span class="pi-bullet-icon"><i class="icon-mail"></i></span>
 									<strong>Email:</strong><br> <a href="mailto:info@heliconiatech.com">info@heliconiatech.com</a>
-								</li>
-								<li>
-									<span class="pi-bullet-icon"><i class="icon-clock"></i></span>
-									<strong>Horarios:</strong><br>Lunes - Viernes: <strong>8:00 am - 8:00 pm</strong>
-									<br>
-									Sábados: <strong>9:00 am - 1:00 pm</strong>
-									<br>
-									Domingos y Festivos: <strong>Cerrado</strong>
 								</li>
 							</ul>
 							<!-- End contact info -->
