--- a/heliconia/about.html
+++ b/heliconia/about.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/portfolio.css"/>
 	<link rel="stylesheet" type="text/css" href="css/slider.css"/>
 	<link rel="stylesheet" type="text/css" href="css/social.css"/>
-	
+
 	<!--Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
 
@@ -25,7 +25,7 @@
 	<style>
 		#location_map {
 			background-image: url('img/colombia-locator.png'); 
-			background-position: 80% 10px; 
+			background-position: 80% -6px; 
 			background-repeat: no-repeat;
 		}
 
@@ -60,9 +60,9 @@
 					<!-- Social icons -->
 					<div class="pi-row-block pi-pull-right pi-hidden-2xs">
 						<ul class="pi-social-icons pi-stacked pi-jump pi-full-height pi-bordered pi-small pi-colored-bg clearFix">
-							<li><a href="#" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
-							<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
-							<li><a href="#" class="pi-social-icon-linkedin"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://twitter.com/heliconiatech" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/heliconiatech" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/heliconiatech" class="pi-social-icon-linkedin"><i class="icon-linkedin"></i></a></li>
 						</ul>
 					</div>
 					<!-- End social icons -->
@@ -91,10 +91,10 @@
 								</li>
 								<li class="active pi-has-dropdown"><a href="about.html"><span>Conócenos</span></a>
 									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="about.html"><span>Misión y Visión</span></a></li>
-										<li><a href="about.html"><span>Nuestra historia</span></a></li>
-										<li><a href="about.html"><span>El equipo</span></a></li>
-										<li><a href="about.html"><span>Clientes satisfechos</span></a></li>
+										<li><a href="#section-1"><span>Misión y Visión</span></a></li>
+										<li><a href="#section-2"><span>Nuestra historia</span></a></li>
+										<li><a href="#section-3"><span>El equipo</span></a></li>
+										<li><a href="#section-4"><span>Clientes satisfechos</span></a></li>
 									</ul>
 								</li>
 								<li class="pi-has-dropdown"><a href="services.html"><span>Servicios</span></a>
@@ -104,13 +104,11 @@
 										<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 									</ul>
 								</li>
-								<li class="pi-has-dropdown"><a href="support.html"><span>Soporte</span></a>
-									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="support.html"><span>F.A.Q.</span></a></li>
-										<li><a href="support.html"><span>Documentación útil</span></a></li>
-									</ul>
+								<li>
+									<a href="faq.html"><span>FAQ</span></a>
 								</li>
-								<li><a href="contact.html"><span>Contáctanos</span></a>
+								<li>
+									<a href="contact.html"><span>Contáctanos</span></a>
 								</li>
 							</ul>
 						</div>
@@ -143,12 +141,7 @@
 											<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 										</ul>
 									</li>
-									<li><a href="support.html"><span>Soporte</span></a>
-										<ul>
-											<li><a href="support.html"><span>F.A.Q.</span></a></li>
-											<li><a href="support.html"><span>Documentación útil</span></a></li>
-										</ul>
-									</li>
+									<li><a href="faq.html"><span>FAQ</span></a></li>
 									<li><a href="contact.html"><span>Contáctanos</span></a></li>
 								</ul>
 							</div>
@@ -175,7 +168,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION - - - - - - - -mision-vision - -->
-			<div class="pi-section-w pi-section-grey">
+			<div id="section-1" class="pi-section-w pi-section-grey">
 				<div class="pi-section">
 					<div class="pi-row">
 						<div class="pi-col-sm-4">
@@ -203,12 +196,13 @@
 							</p>
 						</div>
 					</div>
+					<!-- End row -->
 				</div>
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION - - - - - - - -Historia - -->
-			<div class="pi-section-w pi-section-dark pi-slider-enabled">
+			<div id="section-2" class="pi-section-w pi-section-dark pi-slider-enabled">
 				<div class="pi-section pi-padding-bottom-20">
 					<p class="lead-20 pi-uppercase pi-weight-700 ">
 						Historia, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
@@ -221,7 +215,7 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION - - - - - - - -Team - -->
-			<div class="pi-section-w pi-section-white">
+			<div id="section-3" class="pi-section-w pi-section-white">
 				<div class="pi-section pi-padding-bottom-20">
 					<!-- Row -->
 					<div class="pi-row">
@@ -315,25 +309,9 @@
 				</div>
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
-
-			<!-- - - - - - - - - - SECTION - - - - - - - - - Have a project with us-->
-			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
-				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
-				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
-					<p class="lead-30">
-						<span class="pi-text-white">Have a project with us? <span class="pi-weight-400">Feel free.</span></span>
-
-						<a href="#" class="btn pi-btn-base-2 pi-btn-big" style="margin-left: 25px;">
-							<i class="icon-mail pi-icon-left"></i> Get in Touch
-						</a>
-
-					</p>
-				</div>
-			</div>
-			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 		
 			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
-			<div class="pi-section-w pi-section-white">
+			<div id="section-4" class="pi-section-w pi-section-white">
 				<div class="pi-section">
 					<!-- Filter -->
 					<div class="pi-pagenav pi-big pi-text-center" data-isotope-nav="isotope">
@@ -352,50 +330,49 @@
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
+			<!-- - - - - - - - - - SECTION - - - - - - - - - Have a project with us-->
+			<div class="pi-section-w pi-shadow-inside-top pi-section-base">
+				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
+				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
+					<p class="lead-30">
+						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
+						<a href="contact.html" class="btn pi-btn-base-2 pi-btn-big" style="margin-left: 25px;">
+							<i class="icon-mail pi-icon-left"></i> Contáctanos
+						</a>
+					</p>
+				</div>
+			</div>
+			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
+
 			<!-- Footer -->
 			<div class="pi-section-w pi-border-bottom pi-border-top-light pi-section-dark">
 				<div class="pi-section pi-padding-bottom-10">
 					<!-- Row -->
 					<div class="pi-row">
 						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
+						<div class="pi-col-md-3 pi-col-xs-6 pi-padding-bottom-30">
 							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="about.html" class="pi-link-no-style">Conócenos</a>
+								HeliconiaTech
 							</h6>
 							<!-- Links -->
 							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
 								<li><a href="about.html">Misión y Visión</a></li>
-								<li><a href="about.html">Nuestra historia</a></li>
 								<li><a href="about.html">El equipo</a></li>
-								<li><a href="about.html">Clientes satisfechos</a></li>
-								<li><a href="#">Estamos contratando</a></li>
+								<li><a href="services.html">Nuestros servicios</a></li>
 							</ul>
 							<!-- End links -->
 						</div>
 						<!-- End col 3 -->
 						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
+						<div class="pi-col-md-3 pi-col-xs-6 pi-padding-bottom-30">
 							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="services.html" class="pi-link-no-style">Servicios</a>
+								Información
 							</h6>
 							<!-- Links -->
 							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
-								<li><a href="#">Automatización</a></li>
-								<li><a href="#">Desarrollo web</a></li>
-								<li><a href="#">Consultoría TECH</a></li>
-							</ul>
-							<!-- End links -->
-						</div>
-						<!-- End col 3 -->
-						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
-							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="support.html" class="pi-link-no-style">Soporte</a>
-							</h6>
-							<!-- Links -->
-							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
-								<li><a href="#">F.A.Q.</a></li>
-								<li><a href="#">Documentación útil</a></li>
+								<li><a href="faq.html">FAQ</a></li>
+								<li><a href="news.html">Noticias</a></li>
+								<li><a href="#">Trabaja con nosotros</a></li>
 							</ul>
 							<!-- End links -->
 						</div>
@@ -419,14 +396,6 @@
 								<li>
 									<span class="pi-bullet-icon"><i class="icon-mail"></i></span>
 									<strong>Email:</strong><br> <a href="mailto:info@heliconiatech.com">info@heliconiatech.com</a>
-								</li>
-								<li>
-									<span class="pi-bullet-icon"><i class="icon-clock"></i></span>
-									<strong>Horarios:</strong><br>Lunes - Viernes: <strong>8:00 am - 8:00 pm</strong>
-									<br>
-									Sábados: <strong>9:00 am - 1:00 pm</strong>
-									<br>
-									Domingos y Festivos: <strong>Cerrado</strong>
 								</li>
 							</ul>
 							<!-- End contact info -->
