--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/counters.css"/>
 	<link rel="stylesheet" type="text/css" href="css/social.css"/>
 	<link rel="stylesheet" type="text/css" href="css/animations.css"/>
-	
+
 	<!--Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
 
@@ -27,7 +27,7 @@
 	<style>
 		#location_map {
 			background-image: url('img/colombia-locator.png'); 
-			background-position: 80% 10px; 
+			background-position: 80% -6px; 
 			background-repeat: no-repeat;
 		}
 
@@ -86,9 +86,9 @@
 					<!-- Social icons -->
 					<div class="pi-row-block pi-pull-right pi-hidden-2xs">
 						<ul class="pi-social-icons pi-stacked pi-jump pi-full-height pi-bordered pi-small pi-colored-bg clearFix">
-							<li><a href="#" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
-							<li><a href="#" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
-							<li><a href="#" class="pi-social-icon-linkedin"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://twitter.com/heliconiatech" class="pi-social-icon-twitter"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/heliconiatech" class="pi-social-icon-facebook"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/heliconiatech" class="pi-social-icon-linkedin"><i class="icon-linkedin"></i></a></li>
 						</ul>
 					</div>
 					<!-- End social icons -->
@@ -117,10 +117,10 @@
 								</li>
 								<li class="pi-has-dropdown"><a href="about.html"><span>Conócenos</span></a>
 									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="about.html"><span>Misión y Visión</span></a></li>
-										<li><a href="about.html"><span>Nuestra historia</span></a></li>
-										<li><a href="about.html"><span>El equipo</span></a></li>
-										<li><a href="about.html"><span>Clientes satisfechos</span></a></li>
+										<li><a href="about.html#section-1"><span>Misión y Visión</span></a></li>
+										<li><a href="about.html#section-2"><span>Nuestra historia</span></a></li>
+										<li><a href="about.html#section-3"><span>El equipo</span></a></li>
+										<li><a href="about.html#section-4"><span>Clientes satisfechos</span></a></li>
 									</ul>
 								</li>
 								<li class="pi-has-dropdown"><a href="services.html"><span>Servicios</span></a>
@@ -130,9 +130,11 @@
 										<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 									</ul>
 								</li>
-								<li><a href="faq.html"><span>FAQ</span></a>
+								<li>
+									<a href="faq.html"><span>FAQ</span></a>
 								</li>
-								<li><a href="contact.html"><span>Contáctanos</span></a>
+								<li>
+									<a href="contact.html"><span>Contáctanos</span></a>
 								</li>
 							</ul>
 						</div>
@@ -165,12 +167,7 @@
 											<li><a href="services.html"><span>Consultoría TECH</span></a></li>
 										</ul>
 									</li>
-									<li><a href="support.html"><span>Soporte</span></a>
-										<ul>
-											<li><a href="support.html"><span>F.A.Q.</span></a></li>
-											<li><a href="support.html"><span>Documentación útil</span></a></li>
-										</ul>
-									</li>
+									<li><a href="faq.html"><span>FAQ</span></a></li>
 									<li><a href="contact.html"><span>Contáctanos</span></a></li>
 								</ul>
 							</div>
@@ -245,19 +242,21 @@
 						<!-- Col 4 -->
 						<div class="pi-col-xs-4 pi-padding-bottom-40">
 							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="10">
-								<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
-									<div class='img'>
-										<img src="img_external/icons/80px/light-bulb-lined-white.png" alt="">
+								<a href="services.html">
+									<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
+										<div class='img'>
+											<img src="img_external/icons/80px/light-bulb-lined-white.png" alt="">
+										</div>
 									</div>
-								</div>
-								<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
-									<a href="#" class="pi-link-dark">Automatización</a>
-								</h5>
+									<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
+										Automatización
+									</h5>
+								</a>
 								<p class="pi-margin-bottom-10">
 									Automatiza tu casa, un local comercial, una oficina o el espacio que desees con nuestra ayuda
 								</p>
 								<p>
-									<a href="#">Conoce más<i class="icon-right-open-mini pi-icon-right"></i></a>
+									<a href="services.html">Conoce más<i class="icon-right-open-mini pi-icon-right"></i></a>
 								</p>
 							</div>
 						</div>
@@ -265,20 +264,22 @@
 						<!-- Col 4 -->
 						<div class="pi-col-xs-4 pi-padding-bottom-40">
 							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="110">
-								<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
-									<div class='img'>
-										<img src="img_external/icons/80px/monitor-lined-white.png" alt="">
+								<a href="services.html">
+									<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
+										<div class='img'>
+											<img src="img_external/icons/80px/monitor-lined-white.png" alt="">
+										</div>
 									</div>
-								</div>
-								<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
-									<a href="#" class="pi-link-dark">Desarrollo Web</a>
-								</h5>
+									<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
+										Desarrollo Web
+									</h5>
+								</a>
 								<p class="pi-margin-bottom-10">
 									Creamos páginas y aplicaciones a la medida de tus necesidades usando tecnologías de 
 									punta
 								</p>
 								<p>
-									<a href="#">Conoce más<i class="icon-right-open-mini pi-icon-right"></i></a>
+									<a href="services.html">Conoce más<i class="icon-right-open-mini pi-icon-right"></i></a>
 								</p>
 							</div>
 						</div>
@@ -286,19 +287,21 @@
 						<!-- Col 4 -->
 						<div class="pi-col-xs-4 pi-padding-bottom-40">
 							<div class="pi-icon-box-vertical pi-icon-box-vertical-icon-bigger pi-text-center animated" data-animation="bounceInLeft" data-animation-delay="210">
-								<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
-									<div class='img'>
-										<img src="img_external/icons/80px/pencil-pen-lined-white.png" alt="">
+								<a href="services.html">
+									<div class="ht-service-icon pi-icon-box-icon pi-icon-box-icon-circle pi-icon-box-icon-base" style="background: #E73644;">
+										<div class='img'>
+											<img src="img_external/icons/80px/pencil-pen-lined-white.png" alt="">
+										</div>
 									</div>
-								</div>
-								<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
-									<a href="#" class="pi-link-dark">Consultoría de tecnología</a>
-								</h5>
+									<h5 class="pi-weight-700 pi-uppercase pi-letter-spacing">
+										Consultoría de tecnología
+									</h5>
+								</a>
 								<p class="pi-margin-bottom-10">
 									¿Deseas resolver un problema con la ayuda de la tecnología? Llámanos y estaremos encantados de ayudarte con tu proyecto
 								</p>
 								<p>
-									<a href="#">Conoce más<i class="icon-right-open-mini pi-icon-right"></i></a>
+									<a href="services.html">Conoce más<i class="icon-right-open-mini pi-icon-right"></i></a>
 								</p>
 							</div>
 						</div>
@@ -452,9 +455,9 @@
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
-			<!-- - - - - - - - - - SECTION CONTACT US- - - - - - - - - -->
+			<!-- - - - - - - - - - SECTION CONTACT US - - - - - - - - - -->
 			<div class="pi-section-w pi-shadow-inside-top pi-section-grey">
-				<div class="pi-texture" style="background: url(img/wave.png) repeat;"></div>
+				<div class="pi-texture" style="background: url(img/hexagon.png) repeat;"></div>
 				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40 pi-text-center">
 					<p class="lead-30 pi-text-dark">
 						¿Tienes un proyecto en mente? <span class="pi-weight-400">Nosotros te ayudamos</span>
@@ -465,51 +468,36 @@
 				</div>
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
-				
+
 			<!-- Footer -->
 			<div class="pi-section-w pi-border-bottom pi-border-top-light pi-section-dark">
 				<div class="pi-section pi-padding-bottom-10">
 					<!-- Row -->
 					<div class="pi-row">
 						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
+						<div class="pi-col-md-3 pi-col-xs-6 pi-padding-bottom-30">
 							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="about.html" class="pi-link-no-style">Conócenos</a>
+								HeliconiaTech
 							</h6>
 							<!-- Links -->
 							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
 								<li><a href="about.html">Misión y Visión</a></li>
-								<li><a href="about.html">Nuestra historia</a></li>
 								<li><a href="about.html">El equipo</a></li>
-								<li><a href="about.html">Clientes satisfechos</a></li>
-								<li><a href="#">Estamos contratando</a></li>
+								<li><a href="services.html">Nuestros servicios</a></li>
 							</ul>
 							<!-- End links -->
 						</div>
 						<!-- End col 3 -->
 						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
+						<div class="pi-col-md-3 pi-col-xs-6 pi-padding-bottom-30">
 							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="services.html" class="pi-link-no-style">Servicios</a>
-							</h6>
-							<!-- Links -->
-							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
-								<li><a href="#">Automatización</a></li>
-								<li><a href="#">Desarrollo web</a></li>
-								<li><a href="#">Consultoría TECH</a></li>
-							</ul>
-							<!-- End links -->
-						</div>
-						<!-- End col 3 -->
-						<!-- Col 3 -->
-						<div class="pi-col-md-2 pi-col-xs-6 pi-padding-bottom-30">
-							<h6 class="pi-margin-bottom-20 pi-weight-700 pi-uppercase pi-letter-spacing">
-								<a href="support.html" class="pi-link-no-style">Información</a>
+								Información
 							</h6>
 							<!-- Links -->
 							<ul class="pi-list-with-icons pi-list-icons-right-open pi-link-no-style">
 								<li><a href="faq.html">FAQ</a></li>
 								<li><a href="news.html">Noticias</a></li>
+								<li><a href="#">Trabaja con nosotros</a></li>
 							</ul>
 							<!-- End links -->
 						</div>
@@ -533,14 +521,6 @@
 								<li>
 									<span class="pi-bullet-icon"><i class="icon-mail"></i></span>
 									<strong>Email:</strong><br> <a href="mailto:info@heliconiatech.com">info@heliconiatech.com</a>
-								</li>
-								<li>
-									<span class="pi-bullet-icon"><i class="icon-clock"></i></span>
-									<strong>Horarios:</strong><br>Lunes - Viernes: <strong>8:00 am - 8:00 pm</strong>
-									<br>
-									Sábados: <strong>9:00 am - 1:00 pm</strong>
-									<br>
-									Domingos y Festivos: <strong>Cerrado</strong>
 								</li>
 							</ul>
 							<!-- End contact info -->
