--- a/heliconia/contact.html
+++ b/heliconia/contact.html
@@ -173,10 +173,6 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
 			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
-
-			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
-
-			<!-- - - - - - - - - - SECTION - - - - - - - - - -->
 			<div class="pi-section-w pi-section-white piICheck piStylishSelect piSocials">
 				<div class="pi-section">
 					<div class="pi-row">
@@ -288,13 +284,14 @@
 			<div class="pi-section-w pi-section-white">
 				<div class="pi-google-map pi-google-map-wide googleMap"
 					 data-map-type="roadmap"
-					 data-map-zoom="14"
+					 data-map-zoom="16"
 					 data-map-style="base"
 					 data-map-marker="img/marker-base.png"
 					 data-map-marker-size="67,81"
 					 data-map-marker-anchor="30,81"
-					 data-map-coords="4.724694;-74.029694">
-				</div>
+					 data-map-address="Carrera 7f # 147-48 Bogota"
+					 style="position: relative; overflow: hidden; transform: translateZ(0px); background-color: rgb(229, 227, 223);">
+				</div>			
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 
