--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -53,10 +53,12 @@
 			margin: 0 -25px;
 			border-radius: 50%;
 			box-shadow: inset 0 0 0 16px rgba(255, 255, 255, 0.6), 0 1px 2px rgba(0, 0, 0, 0.3);
+			-webkit-transform: scale(0);
 			transform: scale(0);
 		}
 
 		.ht-service-icon .img:hover:before {
+			-webkit-transform: scale(1);
 			transform: scale(1);
 			transition: all 0.35s ease-in-out;
 			-webkit-transition: all 0.35s ease-in-out;
