ScrollTo en About y MenuMobile en Index

--- a/heliconia/about.html
+++ b/heliconia/about.html
@@ -93,10 +93,10 @@
 								</li>
 								<li class="active pi-has-dropdown"><a href="about.html"><span>Conócenos</span></a>
 									<ul class="pi-submenu pi-has-border pi-items-have-borders pi-has-shadow pi-submenu-dark">
-										<li><a href="#section-1"><span>Misión y Visión</span></a></li>
-										<li><a href="#section-2"><span>Nuestra historia</span></a></li>
-										<li><a href="#section-3"><span>El equipo</span></a></li>
-										<li><a href="#section-4"><span>Clientes satisfechos</span></a></li>
+										<li><a href="#section-1" data-scroll-to="#section-1" data-scroll-to-offset="-60"><span>Misión y Visión</span></a></li>
+										<li><a href="#section-2" data-scroll-to="#section-2" data-scroll-to-offset="-60"><span>Nuestra historia</span></a></li>
+										<li><a href="#section-3" data-scroll-to="#section-3" data-scroll-to-offset="-60"><span>El equipo</span></a></li>
+										<li><a href="#section-4" data-scroll-to="#section-4" data-scroll-to-offset="-60"><span>Clientes satisfechos</span></a></li>
 									</ul>
 								</li>
 								<li class="pi-has-dropdown"><a href="services.html"><span>Servicios</span></a>
@@ -486,7 +486,6 @@
 	<script src="3dParty/jquery.touchSwipe.min.js"></script>
 	<script src="3dParty/requestAnimationFramePolyfill.min.js"></script>
 	<script src="3dParty/jquery.easing.1.3.js"></script>
-	<script src="3dParty/jquery.scrollTo.min.js"></script>
 	<script src="3dParty/colorbox/jquery.colorbox-min.js"></script>
 	<script src="scripts/pi.global.js"></script>
 	<script src="scripts/pi.tooltip.js"></script>
@@ -498,5 +497,6 @@
 	<!-- Added JS -->
 	<script src="3dParty/isotope/isotope.js"></script>
 	<script src="scripts/pi.init.isotope.js"></script>
+	<script src="3dParty/jquery.scrollTo.min.js"></script>
 </body>
 </html>
