Cambios selector sub-servicios

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -156,7 +156,7 @@
 									</li>
 									<li><a href="about.html"><span>Conócenos</span></a>
 										<ul>
-											<li><a href="about.html"><span>Misión y Visión</span></a></li>
+											<li><a href="about.html#section-1"><span>Misión y Visión</span></a></li>
 											<li><a href="about.html"><span>Nuestra historia</span></a></li>
 											<li><a href="about.html"><span>El equipo</span></a></li>
 											<li><a href="about.html"><span>Clientes satisfechos</span></a></li>
