--- a/heliconia/services.html
+++ b/heliconia/services.html
@@ -86,6 +86,19 @@
 			box-shadow: inset 0 0 0 110px rgba(0, 0, 0, 0.6), inset 0 0 0 5px rgba(255, 255, 255, 0.8), 0 1px 2px rgba(0, 0, 0, 0.1);
 			transform: scale(1);
 		}
+
+		.nav select {
+			display: none;
+		}
+
+		@media (max-width: 768px) {
+			.nav ul {
+				display: none;
+			}
+			.nav select {
+				display: inline-block;
+			}
+		}
 	</style>
 
 	<div id="pi-all">
@@ -288,7 +301,7 @@
 					</div>
 					<!-- End row -->
 					<!-- Row Circulos Subservicios-->
-					<div class="pi-row">
+					<div class="nav pi-row">
 						<ul class="pi-grid-small-margins tab_nav" style="list-style-type: none;">
 							<!-- Col 4 -->
 							<li class="pi-col-sm-2 pi-col-xs-6 pi-padding-bottom-50 current_tab">
@@ -387,6 +400,14 @@
 							</li>
 							<!-- End col 4 -->
 						</ul>
+						<select> 
+							<option value="" selected="selected">Select</option> 
+							<option href="#subserv11" value="#subserv11">Home</option> 
+							<option value="/collections/all">Books</option> 
+							<option value="/blogs/five-simple-steps-blog">Blog</option> 
+							<option value="/pages/about-us">About Us</option> 
+							<option value="/pages/support">Support</option> 
+						</select> 
 					</div>
 					<!-- End row -->
 					<!-- Row Subservicios explicacion - Serv1-->
@@ -1319,11 +1340,14 @@
 		    $($(current_tab).attr('href')).hide(); 
 		    current_tab.removeClass('current_tab');
 		    $(this).addClass('current_tab'); //Link se hace activo
-		    $($(this).attr('href')).fadeToggle('slow'); 
+		    $($(this).attr('href')).fadeToggle(1000,'easeInCirc'); 
 		    return false;
 		});
 
-
+		$(".nav select").change(function() {
+		    $(this).closest(".tab_content").hide(); 
+		    $($(this).find("option:selected").attr('href')).fadeToggle('slow'); 
+		});
 	});
 	</script>
 </body>
