Cambio de posicion sidebar para mobile en index

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -70,13 +70,11 @@
 		#sidebar {
 			position: fixed;
 			left: 0px;
-			top: 300px;
-		    width:10%;
+			top: 30%;
 		    float:left;
 		}
 
 		#content {
-		    width:724px;
 		    float:right;
 		    padding-left:24px;
 		}
